# ai-dial-general-purpose-agent-with-memory

./: .gitignore  docker-compose.yml  pyproject.toml
task/: app.py  prompts.py
task/tools/memory/: memory_delete_tool.py  memory_search_tool.py  memory_store.py  memory_store_tool.py
tests/: test_memory_store.py
